--- a/.templates/sidebar_otherserver.html
+++ b/.templates/sidebar_otherserver.html
@@ -1,12 +1,7 @@
 <h3>{{ _('Voir cette page sur un autre serveur ?') }}</h3>
 <!-- DEBUG
-{% if pagename %}
-Nom de la page : {{ pagename|e }}
-{% endif %}
-{% if file_suffix %}
-Suffixe de la page : {{ file_suffix|e }}
-{% endif %}
--->
+ {% if pagename %}Nom de la page : {{ pagename|e }}{% endif %}
+ {% if file_suffix %}Suffixe de la page : {{ file_suffix|e }}{% endif %} -->
 <ul class="this-page-menu">
  <script type="text/javascript">
   switch(window.location.host) {
