CV_Lilian_BESSON -> cv

--- a/.templates/sourcepdfcv.en.html
+++ b/.templates/sourcepdfcv.en.html
@@ -1,16 +1,16 @@
 {%- if show_source and has_source and sourcename %}
 <h3>{{ _('My résumé in French ?') }}</h3>
 <ul class="this-page-menu">
-  <li><a href="CV_Lilian_BESSON.fr.html"
+  <li><a href="cv.fr.html"
          rel="nofollow">Consult the French version, in HTML</a></li>
 </ul><br/>
 <h3>{{ _('My résumé in PDF') }}</h3>
 <ul class="this-page-menu">
-  <li><a href="CV_Lilian_BESSON.pdf"
+  <li><a href="cv.pdf"
          rel="nofollow">Go to the PDF version</a>, compiled from LaTeX with pdflatex</li></br>
-  <li><a href="CV_Lilian_BESSON.fr.pdf"
+  <li><a href="cv.fr.pdf"
          rel="nofollow">Go to the PDF version</a>, compiled from rST (with rst2latex and pdflatex), in French</li></br>
-  <li><a href="CV_Lilian_BESSON.en.pdf"
+  <li><a href="cv.en.pdf"
          rel="nofollow">Go to the PDF version</a>, compiled from rST (with rst2latex and pdflatex), in English</li></br>
 </ul>
 {%- endif %}
