--- a/.templates/sourcepdfcv.fr.html
+++ b/.templates/sourcepdfcv.fr.html
@@ -1,16 +1,16 @@
 {%- if show_source and has_source and sourcename %}
 <h3>{{ _('Mon CV en anglais ?') }}</h3>
 <ul class="this-page-menu">
-  <li><a href="CV_Lilian_BESSON.en.html"
+  <li><a href="cv.en.html"
          rel="nofollow">Voir la version anglaise, en HTML</a></li></br>
 </ul><br/>
 <h3>{{ _('Mon CV en PDF') }}</h3>
 <ul class="this-page-menu">
-  <li><a href="CV_Lilian_BESSON.pdf"
+  <li><a href="cv.pdf"
          rel="nofollow">Voir la version PDF</a>, compilée depuis LaTeX par pdflatex</li></br>
-  <li><a href="CV_Lilian_BESSON.fr.pdf"
+  <li><a href="cv.fr.pdf"
          rel="nofollow">Voir la version PDF</a>, compilée depuis rST (avec rst2latex et pdflatex), en français</li></br>
-  <li><a href="CV_Lilian_BESSON.en.pdf"
+  <li><a href="cv.en.pdf"
          rel="nofollow">Voir la version PDF</a>, compilée depuis rST (avec rst2latex et pdflatex), en anglais</li></br>
 </ul>
 {%- endif %}
