--- a/.templates/sourcepdfcv.en.html
+++ b/.templates/sourcepdfcv.en.html
@@ -1,21 +1,16 @@
 {%- if show_source and has_source and sourcename %}
-<!-- <h3>{{ _('My résumé in French ?') }}</h3>
-<ul class="this-page-menu">
-  <li><a href="cv.fr.html"
-         rel="nofollow">Consult the French version, in HTML</a></li>
-</ul><br/> -->
 <h3>{{ _('Mon CV en Français ?') }}</h3>
 <ul class="this-page-menu">
-  <li><a href="cv.fr.html"
-         rel="nofollow">Consultez la version français, en HTML.</a></li>
+  <li><a style="text-decoration: underline" href="cv.fr.html"
+         rel="nofollow">Lisez-le en français</a>, en HTML.</li>
 </ul><br/>
 <h3>{{ _('My résumé in PDF') }}</h3>
 <ul class="this-page-menu">
-  <li><a href="cv.pdf"
+  <li><a style="text-decoration: underline" href="cv.pdf"
          rel="nofollow">Go to the PDF version</a>, compiled from LaTeX with pdflatex.</li></br></br>
-  <li><a href="cv.fr.pdf"
+  <li><a style="text-decoration: underline" href="cv.fr.pdf"
          rel="nofollow">Go to the PDF version</a>, compiled from rST (with rst2latex and pdflatex), in French.</li></br>
-  <li><a href="cv.en.pdf"
+  <li><a style="text-decoration: underline" href="cv.en.pdf"
          rel="nofollow">Go to the PDF version</a>, compiled from rST (with rst2latex and pdflatex), in English.</li></br>
 </ul>
 {%- endif %}
