ok waypoint.sticky commence à marcher.

--- a/.templates/layout.html
+++ b/.templates/layout.html
@@ -94,7 +94,7 @@
   <!-- Style pour la barre de début de page. TODO FIXME TODO FIXME
    Merci à http://imakewebthings.com/jquery-waypoints/#get-started pour l'inspiration -->
    <style type="text/css">
-    
+    /* FIXME */
    </style>
 
   <!-- Style pour les badges en bas de la page. 
@@ -230,9 +230,11 @@ $(document).ready(function() {
 </script>
 
 <!-- jQuery Waypoints plugin (source : http://imakewebthings.com/jquery-waypoints/) -->
+<!-- <script type="text/javascript" src="{{ pathto('_static/waypoints.js', true)|e }}"></script> -->
 <script type="text/javascript" src="{{ pathto('_static/waypoints.min.js', true)|e }}"></script>
+<script type="text/javascript" src="{{ pathto('_static/waypoints-sticky.js', true)|e }}"></script>
 <style type="text/css">
-h2.my-sticky-element {
+.my-sticky-element {
  text-align:center;
  background:#6a6272;
  color:#eae2f2;
@@ -246,11 +248,13 @@ h2.my-sticky-element {
  box-shadow:0 2px 4px rgba(0, 0, 0, .3);
 }
 </style>
-<!-- <script type="text/javascript">
-$('.my-sticky-element').waypoint('sticky', {
-  offset: 30 // Apply "stuck" when element 30px from top
-})
-</script> -->
+<script type="text/javascript">
+$(document).ready(function() {
+ $('.my-sticky-element').waypoint('sticky', {
+   offset: 30 // Apply "stuck" when element 30px from top
+ });
+});
+</script>
 
 <!-- scrollUp plugin (source : http://markgoodyear.com/2013/01/scrollup-jquery-plugin/) -->
 <script type="text/javascript" src="{{ pathto('_static/jquery.scrollUp.min.js', true)|e }}"></script>
