--- a/.templates/download.html
+++ b/.templates/download.html
@@ -16,7 +16,7 @@
 Et lors de leurs générations, un de mes scripts produit aussi une version PDF de certaines pages (avec rst2pdf).</p>
  <p>Le dossier <a href="{{ pathto('pdf/', true)|e }}">pdf/</a> est là pour vous permettre de télécharger
 les fichiers PDF ainsi produits.</p>
- <p>Cette fonctionnalité est encore en développement !</p>
+ <p>Ceci fonctionne, mais certaines pages perdent leur intérêt (le JavaScript n'est pas encore intégré dans les documents PDF produits, bien que ce soit peut-être possible).</p>
 <br/>
 <h2>Dossier de téléchargement</h2>
  <p>Le dossier <a href="dl/">dl/</a> est là pour télécharger des archives, et des documents particuliers.</p>
