--- a/.templates/sidebar_gpg.html
+++ b/.templates/sidebar_gpg.html
@@ -1,14 +1,15 @@
 <h3>{{ _('Ma clé publique PGP') }}</h3>
 <ul class="this-page-menu">
-<!--
  <li>
+   Sur le serveur du MIT : 
   <a class="reference external image-reference"
    href="http://pgp.mit.edu:11371/pks/lookup?op=get&search=0x01AACDB9C108F8A0">
-   <img alt="C108F8A0" src="{{ pathto('_images/.gpgmypublickey_80_15.png', true)|e }}" style="width: 80.0px; height: 15.0px;" />
+   <img alt="C108F8A0" src="{{ pathto('_images/.gpgpublickey_80_15.png', true)|e }}" style="width: 80.0px; height: 15.0px;" />
   </a>
  </li>
--->
+ </br>
  <li>
+  Sur ce site :
   <a class="reference external image-reference"
    href="{{ pathto('Lilian_Besson.asc', true)|e }}" >
    <img alt="C108F8A0" src="{{ pathto('_images/.gpgmypublickey_80_15.png', true)|e }}" style="width: 80.0px; height: 15.0px;" />
