--- a/.templates/sidebar_otherserver.html
+++ b/.templates/sidebar_otherserver.html
@@ -1,7 +1,9 @@
 <h3>{{ _('Voir cette page sur un autre serveur ?') }}</h3>
 <!-- DEBUG
  {% if pagename %}Nom de la page : {{ pagename|e }}{% endif %}
- {% if file_suffix %}Suffixe de la page : {{ file_suffix|e }}{% endif %} -->
+ {% if file_suffix %}Suffixe de la page : {{ file_suffix|e }}{% endif %} 
+ Marche mieux qu'avec du JavaScript (ex. http://jarvis/index_en n'a pas de file_suffix si déterminé par JS mais en a un déterminé par Jinja).
+-->
 <ul class="this-page-menu">
  <script type="text/javascript">
   switch(window.location.host) {
