Essai de 'position: fixed' pour des trucs de la barre latérale.

--- a/.templates/sidebar_gpg.html
+++ b/.templates/sidebar_gpg.html
@@ -1,3 +1,13 @@
+{#
+    .templates/sidebar_gpg.html
+    ~~~~~~~~~~~~~~~~~~~~~~~~~~~
+
+    Add links to a GPG key in the sidebar.
+
+    :copyright: Copyright 2013 Lilian Besson
+    :license: GPLv3, see LICENSE for details.
+#}
+<div class="will-be-sticky">
 <h3>{{ _('Ma clé publique PGP') }}</h3>
 <ul class="this-page-menu">
  <li>
@@ -16,3 +26,4 @@
   </a>
  </li>
 </ul>
+</div>
