--- a/.templates/sidebar_otherserver.html
+++ b/.templates/sidebar_otherserver.html
@@ -1,3 +1,13 @@
+{#
+    .templates/layout.html
+    ~~~~~~~~~~~~~~~~~~~~~~
+
+    Master layout template for Lilian Besson's Sphinx theme..
+
+    :copyright: Copyright 2013 Lilian Besson
+    :license: GPLv3, see LICENSE for details.
+#}
+<div class="will-be-sticky">
 <h3>{{ _('Voir cette page sur un autre serveur ?') }}</h3>
 <!-- DEBUG
  {% if pagename %}Nom de la page : {{ pagename|e }}{% endif %}
@@ -36,3 +46,4 @@
    <br/>
  </noscript>
 </ul>
+</div>
