--- a/.templates/layout.html
+++ b/.templates/layout.html
@@ -128,6 +128,7 @@
  * by hand all the produced HTML pages.
  * ( Google Analytics is a trademark of Google Inc.)
  *****************************************************************************/  
+ $(document).ready(function() {
 
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -179,6 +180,7 @@
   /*  ga.src = 'http://www.google-analytics.com/ga.js'; */
     var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
   })();
+ });
 </script>
 
 <!-- Simple Image Trail (using _static/simpleimagetrail.gif) script (disable by default) -->
@@ -244,8 +246,9 @@ $(document).ready(function() {
   $('.related').waypoint('sticky', {
     offset: 0 // Apply "stuck" when element 0px from top
   });
- });
- $(document).ready(function() {
+  $('.will-be-stick').waypoint('sticky', {
+    offset: 5 // Apply "stuck" when element 0px from top
+  });
   $('.my-sticky-element').waypoint('sticky', {
     offset: 30 // Apply "stuck" when element 30px from top
   });
