--- a/.templates/sidebar_otherserver.html
+++ b/.templates/sidebar_otherserver.html
@@ -7,7 +7,7 @@
     :copyright: Copyright 2013 Lilian Besson
     :license: GPLv3, see LICENSE for details.
 #}
-<div class="will-be-sticky">
+<div class="is-sticky">
 <h3>{{ _('Voir cette page sur un autre serveur ?') }}</h3>
 <!-- DEBUG
  {% if pagename %}Nom de la page : {{ pagename|e }}{% endif %}
