--- a/.templates/searchbox.html
+++ b/.templates/searchbox.html
@@ -8,7 +8,7 @@
     :license: GPLv3, see LICENSE for details.
 #}
 {%- if pagename != "search" %}
-<div class="will-be-sticky">
+<div class="will-not-be-sticky">
 <div id="searchbox" style="display: none">
   <h3>{{ _('Recherche rapide') }}</h3>
     <form class="search" action="{{ pathto('search') }}" method="get">
