--- a/.templates/sourcepdf.html
+++ b/.templates/sourcepdf.html
@@ -8,7 +8,7 @@
     :license: GPLv3, see LICENSE for details.
 #}
 {%- if show_source and has_source and sourcename %}
-<div class="will-be-sticky">
+<div class="will-not-be-sticky">
 <h3>{{ _('Cette page en PDF ou en texte seul') }}</h3>
 <ul class="this-page-menu">
  <li><a href="{{ pathto('pdf/' + sourcename + '.pdf', true)|e }}"
