templates en .fr et .en

--- a/.templates/download.fr.html
+++ b/.templates/download.fr.html
@@ -1,3 +1,12 @@
+{#
+    .templates/download.fr.html
+    ~~~~~~~~~~~~~~~~~~~~~~~~~~~
+
+    Download global page. (fr version)
+
+    :copyright: Copyright 2013 Lilian Besson
+    :license: GPLv3, see LICENSE for details.
+#}
 {% extends "layout.html" %}
 {% set title = 'Téléchargement' %}
 {% block body %}
