--- a/.templates/linkpdf.en.html
+++ b/.templates/linkpdf.en.html
@@ -1,4 +1,13 @@
-<h3>{{ _('My résumé in PDF ?') }}</h3>
+{#
+    .templates/linkpdf.en.html
+    ~~~~~~~~~~~~~~~~~~~~~~~~~~
+
+    Add links to cv.pdf on each English pages. (en version)
+
+    :copyright: Copyright 2013 Lilian Besson
+    :license: GPLv3, see LICENSE for details.
+#}
+<h3>My résumé in PDF ?</h3>
 <ul class="this-page-menu">
   <li><a style="text-decoration: underline" href="cv.pdf"
          rel="nofollow">Consult my résumé cv.pdf</a> (in English).</li></br></br>
