--- a/.templates/linkpdf.fr.html
+++ b/.templates/linkpdf.fr.html
@@ -1,4 +1,13 @@
-<h3>{{ _('Mon CV en PDF ?') }}</h3>
+{#
+    .templates/linkpdf.fr.html
+    ~~~~~~~~~~~~~~~~~~~~~~~~~~
+
+    Add links to cv.pdf on each French pages. (fr version)
+
+    :copyright: Copyright 2013 Lilian Besson
+    :license: GPLv3, see LICENSE for details.
+#}
+<h3>Mon CV en PDF ?</h3>
 <ul class="this-page-menu">
   <li><a style="text-decoration: underline" href="cv.pdf"
          rel="nofollow">Voir mon CV en PDF</a> (en anglais).</li></br></br>
