--- a/.templates/sidebar_gpg.en.html
+++ b/.templates/sidebar_gpg.en.html
@@ -1,17 +1,17 @@
 {#
-    .templates/sidebar_gpg.html
-    ~~~~~~~~~~~~~~~~~~~~~~~~~~~
+    .templates/sidebar_gpg.en.html
+    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
-    Add links to a GPG key in the sidebar.
+    Add links to a GPG key in the sidebar. (en version)
 
     :copyright: Copyright 2013 Lilian Besson
     :license: GPLv3, see LICENSE for details.
 #}
 <div class="will-be-sticky">
-<h3>{{ _('Ma clé publique PGP') }}</h3>
+<h3>My public PGP key</h3>
 <ul class="this-page-menu">
  <li>
-   Sur le serveur du MIT : 
+   On the MIT server:
   <a class="reference external image-reference"
    href="http://pgp.mit.edu:11371/pks/lookup?op=get&search=0x01AACDB9C108F8A0">
    <img alt="C108F8A0" src="{{ pathto('_images/.gpgpublickey_80_15.png', true)|e }}" style="width: 80.0px; height: 15.0px;" />
@@ -19,7 +19,7 @@
  </li>
  </br>
  <li>
-  Sur ce site :
+  On this site:
   <a class="reference external image-reference"
    href="{{ pathto('Lilian_Besson.asc', true)|e }}" >
    <img alt="C108F8A0" src="{{ pathto('_images/.gpgmypublickey_80_15.png', true)|e }}" style="width: 80.0px; height: 15.0px;" />
