--- a/.templates/sidebar_otherserver.fr.html
+++ b/.templates/sidebar_otherserver.fr.html
@@ -1,14 +1,14 @@
 {#
-    .templates/layout.html
-    ~~~~~~~~~~~~~~~~~~~~~~
+    .templates/otherserver.fr.html
+    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
-    Master layout template for Lilian Besson's Sphinx theme..
+    Display links to see the page in an other server. (fr version)
 
     :copyright: Copyright 2013 Lilian Besson
     :license: GPLv3, see LICENSE for details.
 #}
 <div class="will-not-be-sticky">
-<h3>{{ _('Voir cette page sur un autre serveur ?') }}</h3>
+<h3>Voir cette page sur un autre serveur ?</h3>
 <!-- DEBUG
  {% if pagename %}Nom de la page : {{ pagename|e }}{% endif %}
  {% if file_suffix %}Suffixe de la page : {{ file_suffix|e }}{% endif %} 
