--- a/.templates/sourcepdf.fr.html
+++ b/.templates/sourcepdf.fr.html
@@ -1,21 +1,21 @@
 {#
-    .templates/sourcepdf.html
-    ~~~~~~~~~~~~~~~~~~~~~~~~~
+    .templates/sourcepdf.fr.html
+    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
-    Add links to a PDF and a .txt version of each pages.
+    Add links to a PDF and a .txt version of each pages. (fr version)
 
     :copyright: Copyright 2013 Lilian Besson
     :license: GPLv3, see LICENSE for details.
 #}
 {%- if show_source and has_source and sourcename %}
 <div class="will-not-be-sticky">
-<h3>{{ _('Cette page en PDF ou en texte seul') }}</h3>
+<h3>Cette page en PDF ou en texte seul</h3>
 <ul class="this-page-menu">
  <li><a href="{{ pathto('pdf/' + sourcename + '.pdf', true)|e }}"
         rel="nofollow">Voir la version PDF (expérimental)</a></li>
  <li><a href="{{ pathto('_sources/' + sourcename, true)|e }}"
         rel="nofollow">Voir le fichier source rST</a></li>
- <li><br><a href="{{ pathto('download')|e }}" rel="nofollow">Page de téléchargement</a></li><br/>
+ <li><br><a href="{{ pathto('download.fr')|e }}" rel="nofollow">Page de téléchargement</a></li><br/>
 </ul>
 </div>
 {%- endif %}
