--- a/.templates/layout.html
+++ b/.templates/layout.html
@@ -1,3 +1,12 @@
+{#
+    .templates/layout.html
+    ~~~~~~~~~~~~~~~~~~~~~~~~~~~
+
+    Page principale. (default version)
+
+    :copyright: Copyright 2013 Lilian Besson
+    :license: GPLv3, see LICENSE for details.
+#}
 {% extends "!layout.html" %}
 {% block rootrellink %}
  <li><img src="{{ pathto('_static/.besson.png', true)|e }}" alt=""
@@ -422,7 +431,7 @@ pour collecter des statistiques, ce qui peut être désactivé avec
 <br/>
 <div id="supportBadges">
 <ul>
-<li><a class="reference external image-reference" href="http://www.mozilla.org/en-US/firefox/all/"><img alt="Optimized for Firefox, tested on Firefox 23.0" src="{{ pathto('_images/.firefox_80_15.png', true)|e }}" style="width: 80.0px; height: 15.0px;" /></a></li>
+<li><a class="reference external image-reference" href="http://www.mozilla.org/en-US/firefox/all/"><img alt="Optimized for Firefox, tested on Firefox 24.0" src="{{ pathto('_images/.firefox_80_15.png', true)|e }}" style="width: 80.0px; height: 15.0px;" /></a></li>
 <li><a class="reference external image-reference" href="http://www.google.com/analytics/"><img alt="Use Google Analytics" src="{{ pathto('_images/.google_analytics_80_15.png', true)|e }}" style="width: 80.0px; height: 15.0px;" /></a></li>
 <li><a class="reference external image-reference" href="http://www.nano-editor.org/"><img alt="Written with GNU Nano 2.3.2" src="{{ pathto('_images/.made_with_nano_80_15.png', true)|e }}" style="width: 80.0px; height: 15.0px;" /></a></li>
 <li><a class="reference external image-reference" href="http://www.gnu.org/licenses/gpl.html"><img alt="These pages are an Open Source project, released with the GPLv3 License" src="{{ pathto('_images/.opensource_80_15.png', true)|e }}" style="width: 80.0px; height: 15.0px;" /></a></li>
