--- a/.templates/relations.fr.html
+++ b/.templates/relations.fr.html
@@ -1,22 +1,22 @@
 {#
-    .templates/relations.html
-    ~~~~~~~~~~~~~~~~~~~~~~~~~
+    .templates/relations.fr.html
+    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
-    Add links to the next and the prev pages.
+    Add links to the next and the prev pages. (fr version)
 
     :copyright: Copyright 2013 Lilian Besson
     :license: GPLv3, see LICENSE for details.
 #}
 {%- if prev %}
 <div class="will-not-be-sticky">
-  <h4>Page précédent</h4>
+  <h4>Page précedente</h4>
   <p class="topless"><a href="{{ prev.link|e }}"
                         title="page précédente !">{{ prev.title }}</a></p>
 </div>
 {%- endif %}
 {%- if next %}
 <div class="will-not-be-sticky">
-  <h4>{{ _('Page suitante') }}</h4>
+  <h4>Page suitante</h4>
   <p class="topless"><a href="{{ next.link|e }}"
                         title="page suivante !">{{ next.title }}</a></p>
 </div>
