--- a/.templates/sourcepdfcv.fr.html
+++ b/.templates/sourcepdfcv.fr.html
@@ -1,10 +1,19 @@
+{#
+    .templates/sourcepdfcv.fr.html
+    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+
+    For the CV, show links to PDF. (fr version)
+
+    :copyright: Copyright 2013 Lilian Besson
+    :license: GPLv3, see LICENSE for details.
+#}
 {%- if show_source and has_source and sourcename %}
-<h3>{{ _('My résumé in English ?') }}</h3>
+<h3>My résumé in English ?</h3>
 <ul class="this-page-menu">
   <li><a style="text-decoration: underline" href="cv.en.html"
          rel="nofollow">Consult it in English</a>, in HTML.</li></br>
 </ul><br/>
-<h3>{{ _('Mon CV en PDF') }}</h3>
+<h3>Mon CV en PDF</h3>
 <ul class="this-page-menu">
   <li><a style="text-decoration: underline" href="cv.pdf"
          rel="nofollow">Voir la version PDF</a>, compilée depuis LaTeX par pdflatex.</li></br></br>
