social_icons: new :)

--- a/.templates/sidebar_gpg.fr.html
+++ b/.templates/sidebar_gpg.fr.html
@@ -7,7 +7,7 @@
     :copyright: Copyright 2013 Lilian Besson
     :license: GPLv3, see LICENSE for details.
 #}
-<div class="will-be-sticky">
+<div class="will-not-be-sticky">
 <h3>Ma clé publique PGP</h3>
 <ul class="this-page-menu">
  <li>
