--- a/.templates/social_icons.en.html
+++ b/.templates/social_icons.en.html
@@ -20,21 +20,8 @@
     </li>
   </ul>
   <ul class="social-icons">
-  <!--  <li>
-      <a class="twitter" href="http://twitter.com/converser">Twitter</a>
-    </li>
     <li>
-      <a class="facebook" href="http://www.facebook.com/Converser.io">Facebook</a>
-    </li>
-    <li>
-      <a class="googleplus" href="https://plus.google.com/u/0/b/110081260459761269295/">GooglePlus</a>
-    </li>
-    <li>
-      <a class="linkedin" href="http://www.linkedin.com/company/converser">LinkedIn</a>
-    </li>
-    -->
-    <li>
-      <a class="facebook" href="http://www.facebook.com/naereencorp.lbesson">Facebook</a>
+      <a class="facebook" href="http://www.facebook.com/naereencorp.lbesson" title="Facebook">Facebook</a>
     </li>
   </ul>
 </div>
