--- a/.templates/sidebar_otherserver.fr.html
+++ b/.templates/sidebar_otherserver.fr.html
@@ -8,7 +8,7 @@
     :license: GPLv3, see LICENSE for details.
 #}
 <div class="will-not-be-sticky">
-<h3>Voir cette page sur un autre serveur ?</h3>
+<h3>Voir cette page sur un autre serveur</h3>
 <!-- DEBUG
  {% if pagename %}Nom de la page : {{ pagename|e }}{% endif %}
  {% if file_suffix %}Suffixe de la page : {{ file_suffix|e }}{% endif %} 
@@ -18,16 +18,16 @@
  <script type="text/javascript">
   switch(window.location.host) {
     case 'jarvis.crans.org':
-        document.write("<br/>Sur <span style=\"text-decoration:underline\"><a href=\"http://besson.qc.to/{{ pagename|e }}{{ file_suffix|e }}\">besson.qc.to</a></span> ?\n");
-        document.write("<br/>Sur <span style=\"text-decoration:underline\"><a href=\"http://lbesson.qc.to/{{ pagename|e }}{{ file_suffix|e }}\">lbesson.qc.to</a></span> ?\n");
+        document.write("<br/>Sur <span style=\"text-decoration:underline\"><a href=\"http://besson.qc.to/{{ pagename|e }}{{ file_suffix|e }}\">besson.qc.to</a></span>\n");
+        document.write("<br/>Sur <span style=\"text-decoration:underline\"><a href=\"http://lbesson.qc.to/{{ pagename|e }}{{ file_suffix|e }}\">lbesson.qc.to</a></span>\n");
         break;
     case 'perso.crans.org':
-        document.write("<br/>Sur <span style=\"text-decoration:underline\"><a href=\"http://jarvis.crans.org/{{ pagename|e }}{{ file_suffix|e }}\">jarvis.crans.org</a></span> ?\n");
-        document.write("<br/>Sur <span style=\"text-decoration:underline\"><a href=\"http://lbesson.qc.to/{{ pagename|e }}{{ file_suffix|e }}\">lbesson.qc.to</a></span> ?\n");
+        document.write("<br/>Sur <span style=\"text-decoration:underline\"><a href=\"http://jarvis.crans.org/{{ pagename|e }}{{ file_suffix|e }}\">jarvis.crans.org</a></span>\n");
+        document.write("<br/>Sur <span style=\"text-decoration:underline\"><a href=\"http://lbesson.qc.to/{{ pagename|e }}{{ file_suffix|e }}\">lbesson.qc.to</a></span>\n");
         break;
     case 'www.dptinfo.ens-cachan.fr':
-        document.write("<br/>Sur <span style=\"text-decoration:underline\"><a href=\"http://besson.qc.to/{{ pagename|e }}{{ file_suffix|e }}\">besson.qc.to</a></span> ?\n");
-        document.write("<br/>Sur <span style=\"text-decoration:underline\"><a href=\"http://jarvis.crans.org/{{ pagename|e }}{{ file_suffix|e }}\">jarvis.crans.org</a></span> ?\n");
+        document.write("<br/>Sur <span style=\"text-decoration:underline\"><a href=\"http://besson.qc.to/{{ pagename|e }}{{ file_suffix|e }}\">besson.qc.to</a></span>\n");
+        document.write("<br/>Sur <span style=\"text-decoration:underline\"><a href=\"http://jarvis.crans.org/{{ pagename|e }}{{ file_suffix|e }}\">jarvis.crans.org</a></span>\n");
         break;
     default:
         document.write("<br/>Error, this page is hosted on an unknown location...");
